# walscan-rs

./: .gitignore  Cargo.toml  README.md  data.inp  data.out
src/: main.rs
