[package]
name = "walscan-rs"
version = "0.1.0"
edition = "2021"
authors = ["phnaharris <phnanh.harris@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Binary utils for getting wallet balance on EVM-compatible networks."
repository = "https://github.com/phnaharris/walscan-rs.git"
keywords = ["cli", "crypto", "web3"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
ethers = "2.0.11"
serde = "1.0.193"
tokio = { version = "1.34.0", features = ["full"] }
